// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardPage > TODO削除 > 削除ボタンクリックでDELETE APIが呼ばれる > api-requests-delete 1`] = `
[
  {
    "method": "DELETE",
    "url": "/todo/1/",
  },
]
`;

exports[`DashboardPage > TODO更新 > チェックボックスクリックで完了状態が更新される > api-requests-toggle 1`] = `
[
  {
    "data": {
      "detail": "Detail 1",
      "isCompleted": true,
      "name": "Test Todo 1",
    },
    "method": "PUT",
    "url": "/todo/1/",
  },
]
`;

exports[`DashboardPage > TODO更新 > 値変更→保存ボタンでPUT APIが呼ばれる > api-requests-update 1`] = `
[
  {
    "data": {
      "detail": "Updated Detail",
      "dueDate": null,
      "isCompleted": false,
      "name": "Updated Todo",
    },
    "method": "PUT",
    "url": "/todo/1/",
  },
]
`;

exports[`DashboardPage > TODO追加 > タスク名入力→追加ボタンでPOST APIが呼ばれる > api-requests-add 1`] = `
[
  {
    "data": {
      "detail": "New Detail",
      "dueDate": null,
      "isCompleted": false,
      "name": "New Todo",
    },
    "method": "POST",
    "url": "/todo/",
  },
]
`;

exports[`DashboardPage > 初期表示 > ページレンダリング時にGET APIが呼ばれ、TODOリストが表示される > api-requests 1`] = `
[
  {
    "method": "GET",
    "url": "/auth/user",
  },
]
`;

exports[`DashboardPage > 初期表示 > ページレンダリング時にGET APIが呼ばれ、TODOリストが表示される > dom 1`] = `
<div>
  <nav
    class="bg-[#1A535C] text-white"
  >
    <div
      class="container mx-auto px-4"
    >
      <div
        class="flex items-center justify-between h-16"
      >
        <a
          class="text-xl font-bold text-white hover:text-gray-200"
          href="#"
        >
          Todo App
        </a>
        <div
          class="flex items-center space-x-4"
        >
          <span
            class="text-white font-semibold"
          >
            Welcome 
          </span>
          <button
            class="px-3 py-1 bg-cyan-600 text-white rounded-md hover:bg-cyan-700 transition-colors text-sm"
          >
            Logout
          </button>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="container"
  >
    <section
      class="mb-6 rounded-lg border border-gray-100 bg-white p-4 shadow-md"
    >
      <h4
        class="mb-3 text-lg font-bold"
      >
        検索・フィルタ
      </h4>
      <div
        class="flex flex-col gap-4 md:flex-row md:items-end"
      >
        <div
          class="flex-1"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700"
            for="todo-search-keyword"
          >
            検索
          </label>
          <input
            class="w-full rounded-md border border-gray-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="todo-search-keyword"
            placeholder="タスク名・詳細で検索"
            type="text"
            value=""
          />
        </div>
        <div
          class="w-full md:w-48"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700"
            for="todo-search-status"
          >
            状態
          </label>
          <select
            class="w-full rounded-md border border-gray-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="todo-search-status"
          >
            <option
              value="all"
            >
              すべて
            </option>
            <option
              value="completed"
            >
              完了
            </option>
            <option
              value="incomplete"
            >
              未完了
            </option>
          </select>
        </div>
        <div
          class="w-full md:w-48"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700"
            for="todo-search-due-date"
          >
            期限
          </label>
          <select
            class="w-full rounded-md border border-gray-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="todo-search-due-date"
          >
            <option
              value="all"
            >
              すべて
            </option>
            <option
              value="today"
            >
              今日
            </option>
            <option
              value="this_week"
            >
              今週
            </option>
            <option
              value="overdue"
            >
              期限切れ
            </option>
            <option
              value="none"
            >
              期限なし
            </option>
          </select>
        </div>
        <div
          class="flex w-full md:w-auto"
        >
          <button
            class="w-full rounded-md border border-gray-300 px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50"
            type="button"
          >
            クリア
          </button>
        </div>
      </div>
    </section>
    <br />
    <h4
      class="text-xl font-bold mb-4"
    >
      Todo List
    </h4>
    <div
      class="space-y-4"
    >
      <div
        class="rounded-lg shadow-md p-4 hover:shadow-lg transition-shadow duration-200 border border-gray-100 overflow-hidden bg-white"
      >
        <div
          class="flex justify-between items-start gap-4"
        >
          <div
            class="flex items-start gap-3 flex-1 min-w-0"
          >
            <input
              class="mt-1.5 w-5 h-5 text-blue-600 rounded focus:ring-blue-500 border-gray-300 cursor-pointer"
              type="checkbox"
            />
            <div
              class="min-w-0"
            >
              <h5
                class="text-lg font-semibold break-all overflow-hidden text-gray-800"
              >
                Test Todo 1
              </h5>
              <p
                class="text-sm mt-1 text-gray-500"
              >
                期限: 
                -
              </p>
            </div>
          </div>
          <div
            class="flex gap-2 shrink-0"
          >
            <button
              class="px-3 py-1 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors text-sm"
            >
              Edit
            </button>
            <button
              class="px-3 py-1 bg-red-600 text-white rounded-md hover:bg-red-700 transition-colors text-sm"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="mt-3 pt-3 border-t border-gray-100"
        >
          <p
            class="break-all whitespace-pre-wrap overflow-hidden text-gray-600"
          >
            Detail 1
          </p>
        </div>
      </div>
      <div
        class="rounded-lg shadow-md p-4 hover:shadow-lg transition-shadow duration-200 border border-gray-100 overflow-hidden bg-gray-50"
      >
        <div
          class="flex justify-between items-start gap-4"
        >
          <div
            class="flex items-start gap-3 flex-1 min-w-0"
          >
            <input
              checked=""
              class="mt-1.5 w-5 h-5 text-blue-600 rounded focus:ring-blue-500 border-gray-300 cursor-pointer"
              type="checkbox"
            />
            <div
              class="min-w-0"
            >
              <h5
                class="text-lg font-semibold break-all overflow-hidden text-gray-400 line-through"
              >
                Test Todo 2
              </h5>
              <p
                class="text-sm mt-1 text-gray-400"
              >
                期限: 
                -
              </p>
            </div>
          </div>
          <div
            class="flex gap-2 shrink-0"
          >
            <button
              class="px-3 py-1 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors text-sm"
            >
              Edit
            </button>
            <button
              class="px-3 py-1 bg-red-600 text-white rounded-md hover:bg-red-700 transition-colors text-sm"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="mt-3 pt-3 border-t border-gray-100"
        >
          <p
            class="break-all whitespace-pre-wrap overflow-hidden text-gray-400"
          >
            Detail 2
          </p>
        </div>
      </div>
    </div>
    <div
      class="bg-white rounded-lg shadow-md p-6 my-6"
    >
      <h2
        class="text-xl font-bold mb-4"
      >
        Add Todo
      </h2>
      <form>
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-2"
            for="todo-name"
          >
            Task
          </label>
          <input
            class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 border-gray-300 "
            id="todo-name"
            maxlength="100"
            name="name"
            type="text"
            value=""
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-2"
            for="todo-detail"
          >
            Detail
          </label>
          <input
            class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 border-gray-300 "
            id="todo-detail"
            maxlength="500"
            name="detail"
            type="text"
            value=""
          />
        </div>
        <div
          class="mb-4"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-2"
            for="todo-dueDate"
          >
            Due Date
          </label>
          <input
            class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 border-gray-300"
            id="todo-dueDate"
            name="dueDate"
            type="date"
            value=""
          />
        </div>
        <div
          class="mb-4"
        >
          <button
            class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors"
            type="submit"
          >
            Submit
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
